--- a/client/index.html
+++ b/client/index.html
@@ -5,17 +5,20 @@
 <head>
 	<!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<title>Island Game</title>
+	<link rel="icon" href="images/Pirate.png">
+
 	<link href="styles/stylesFromPSD.css" rel="stylesheet" type="text/css">
 	<link href="styles/styles.css" rel="stylesheet" type="text/css">
+
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
 		integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
 		crossorigin="" />
 
-	<link rel="icon" href="images/Pirate.png">
+
 	<script src="js/main.js" type="module"></script>
-	<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
 		integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
 		crossorigin=""></script>
